# plot

./: .gitignore  CMakeLists.txt  ReleaseNotes.md  flake.nix
.azure-pipelines/: continuous.yml  pr.yml  release.yml
.azure-pipelines-disabled/templates/: create-release.yml
.azure-pipelines/templates/: build-linux.yml  build-osx.yml  build-windows.yml  code-quality-checks.yml  create-release.yml  package-linux.yml  package-osx.yml  package-windows.yml  package-zip.yml  set-short-hash.yml
.github/workflows/: continuous.yml  pr.yml  release.yml
.github/workflows/publish/: action.yml
.github/workflows/qc/: action.yml
.github/workflows/setup/: action.yml
axes/: CMakeLists.txt
axes/src/: CMakeLists.txt  axisentity.cpp  axisentity.h  cuboid.cpp  cuboid.h  framegraph.cpp  framegraph.h  lineentity.cpp  lineentity.h  main.cpp  mainwindow.h  mainwindow.ui  mainwindow_funcs.cpp  metrics.cpp  metrics.h  textentity.cpp  textentity.h  widget.cpp  widget.h
axes/src/classes/: cuboid.h  metrics.cpp
axes/src/entities/: text.cpp  text.h
examples/: CMakeLists.txt
examples/2d/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow_funcs.cpp
examples/3d/: CMakeLists.txt  mainwindow.h  mainwindow_funcs.cpp
examples/basic/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  mainwindow_funcs.cpp
examples/errors/: CMakeLists.txt  mainwindow.h  mainwindow.ui  mainwindow_funcs.cpp
examples/groups/: CMakeLists.txt  mainwindow.h  mainwindow.ui  mainwindow_funcs.cpp
examples/log-axes/: CMakeLists.txt  mainwindow.h  mainwindow.ui  mainwindow_funcs.cpp
examples/stress/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  mainwindow_funcs.cpp
from_qt/basic/: CMakeLists.txt
from_qt/basic/src/: CMakeLists.txt  main.cpp  orbittransformcontroller.h  orbittransformcontroller_funcs.cpp
from_qt/shapes/: CMakeLists.txt
from_qt/shapes/src/: CMakeLists.txt  main.cpp  scenemodifier.h  scenemodifier_funcs.cpp
lines/: CMakeLists.txt
lines/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  README.md  displaygroup.cpp  displaygroup.h  framegraph.cpp  framegraph.h  keyboard.cpp  mainwindow_funcs.cpp  material.cpp  material.h  mouse.cpp  scenegraph.cpp  shaders.qrc  version.h  widget.cpp  widget.h
src/classes/: CMakeLists.txt  colourdefinition.cpp  colourdefinition.h  cuboid.cpp  cuboid.h  metrics.cpp  metrics.h
src/entities/: CMakeLists.txt  axis.cpp  axis.h  data.cpp  data.h  data1d.cpp  data1d.h  data2d.cpp  data2d.h  data3d.cpp  data3d.h  line.cpp  line.h  text.cpp  text.h
src/materials/: CMakeLists.txt  effect.cpp  effect.h  material.cpp  material.h  monochrome_phong.cpp  monochrome_phong.h  monochrome_phong_effect.cpp  shaders.qrc
src/materials/shaders/: clipped.vert  phong.frag  phong.vert  unclipped.vert
src/renderers/: CMakeLists.txt
src/renderers/1d/: CMakeLists.txt  base.h  error.cpp  error.h  error_base.cpp  error_none.h  error_stick.cpp  error_stick.h  error_t_stick.cpp  error_t_stick.h  error_tee.cpp  error_tee.h  line.cpp  line.h  line_none.h  no_error.h  noerror.h  noline.h  stylefactory.cpp  stylefactory.h  symbol_base.cpp  symbol_diamond.cpp  symbol_diamond.h  symbol_none.h  symbol_square.cpp  symbol_square.h  symbol_triangle.cpp  symbol_triangle.h
src/renderers/2d/: CMakeLists.txt  base.h  line.cpp  line.h  stylefactory.cpp  stylefactory.h
src/renderers/3d/: CMakeLists.txt  base.h  line.cpp  line.h  stylefactory.cpp  stylefactory.h
src/shaders/: clipped.vert  line_stipple.frag  line_stipple.geom  line_tesselator.geom  monochrome.frag  phong.frag  phongpervertex.frag  texture.frag  texture.vert  unclipped.vert
